Update to newer versions. Other bigdatatools zip is needed!
sparkBasics and the solution is not working at the moment. This part will probably also be thrown away.

--- a/05_1_DWH_dimDate.ipynb
+++ b/05_1_DWH_dimDate.ipynb
@@ -12,11 +12,20 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-09-20T08:02:31.251557Z",
-     "end_time": "2023-09-20T08:02:31.914318Z"
+     "end_time": "2024-09-03T09:34:47.610467100Z",
+     "start_time": "2024-09-03T09:34:46.693004800Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\DevProjects\\Databricks\\ConnectionConfig.py:10: SyntaxWarning: invalid escape sequence '\\P'\n",
+      "  java_home = \"C:\\Program Files\\Java\\\\jdk-11\"\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "from pyspark.sql import SparkSession\n",
@@ -40,8 +49,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-09-20T08:02:56.452339Z",
-     "end_time": "2023-09-20T08:03:36.866919Z"
+     "end_time": "2024-09-03T09:35:16.031680800Z",
+     "start_time": "2024-09-03T09:34:49.138425700Z"
     }
    },
    "outputs": [
@@ -49,13 +58,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<pyspark.sql.session.SparkSession object at 0x00000223A1809910>\n"
+      "<pyspark.sql.session.SparkSession object at 0x000001FE590ADC40>\n"
      ]
     },
     {
      "data": {
-      "text/plain": "<pyspark.sql.session.SparkSession at 0x223a1809910>",
-      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://host.docker.internal:4040\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.4.0</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[*]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>DIM_DATE</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
+      "text/plain": "<pyspark.sql.session.SparkSession at 0x1fe590adc40>",
+      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://host.docker.internal:4040\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.5.2</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[*]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>DIM_DATE</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
      },
      "execution_count": 2,
      "metadata": {},
@@ -83,8 +92,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-09-20T08:30:23.583710Z",
-     "end_time": "2023-09-20T08:30:33.247035Z"
+     "end_time": "2024-09-03T09:35:30.455217100Z",
+     "start_time": "2024-09-03T09:35:24.185510700Z"
     }
    },
    "outputs": [
@@ -115,9 +124,7 @@
       "|  2009-01-18|    17|\n",
       "|  2009-01-19|    18|\n",
       "|  2009-01-20|    19|\n",
-      "+------------+------+\n",
-      "only showing top 20 rows\n",
-      "\n"
+      "+------------+------+\n"
      ]
     }
    ],
@@ -172,8 +179,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-09-20T08:34:43.615040Z",
-     "end_time": "2023-09-20T08:34:45.280560Z"
+     "end_time": "2024-09-03T09:35:38.428526100Z",
+     "start_time": "2024-09-03T09:35:37.444288100Z"
     }
    },
    "outputs": [
@@ -204,9 +211,7 @@
       "|    17|20090118|  2009-01-18|        2009|      January|          1|     Sunday|        1|                   7|        N|        18|               N|       18|            3|            1|\n",
       "|    18|20090119|  2009-01-19|        2009|      January|          1|     Monday|        2|                   1|        Y|        19|               N|       19|            4|            1|\n",
       "|    19|20090120|  2009-01-20|        2009|      January|          1|    Tuesday|        3|                   2|        Y|        20|               N|       20|            4|            1|\n",
-      "+------+--------+------------+------------+-------------+-----------+-----------+---------+--------------------+---------+----------+----------------+---------+-------------+-------------+\n",
-      "only showing top 20 rows\n",
-      "\n"
+      "+------+--------+------------+------------+-------------+-----------+-----------+---------+--------------------+---------+----------+----------------+---------+-------------+-------------+\n"
      ]
     }
    ],
@@ -265,8 +270,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-09-20T08:34:55.204790Z",
-     "end_time": "2023-09-20T08:34:55.899111Z"
+     "end_time": "2024-09-03T09:35:46.142017600Z",
+     "start_time": "2024-09-03T09:35:45.703527700Z"
     }
    },
    "outputs": [
@@ -297,9 +302,7 @@
       "|  2009-01-18|    17|2009|January|             N|\n",
       "|  2009-01-19|    18|2009|January|             N|\n",
       "|  2009-01-20|    19|2009|January|             N|\n",
-      "+------------+------+----+-------+--------------+\n",
-      "only showing top 20 rows\n",
-      "\n"
+      "+------------+------+----+-------+--------------+\n"
      ]
     }
    ],
@@ -337,8 +340,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-09-20T08:35:56.735430Z",
-     "end_time": "2023-09-20T08:36:15.284417Z"
+     "end_time": "2024-09-03T09:35:58.196353600Z",
+     "start_time": "2024-09-03T09:35:50.593795800Z"
     }
    },
    "outputs": [],
