--- a/05_3_DWH_dimSalesRep_Incremental.ipynb
+++ b/05_3_DWH_dimSalesRep_Incremental.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "\n",
@@ -22,15 +22,25 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-09-20T13:13:08.499376Z",
-     "end_time": "2023-09-20T13:13:08.529659Z"
+     "end_time": "2024-09-03T11:15:31.610603200Z",
+     "start_time": "2024-09-03T11:15:30.755198800Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 2,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "<pyspark.sql.session.SparkSession at 0x1996a7cca10>",
+      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://host.docker.internal:4041\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.5.2</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[*]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>dimSalesIncrementalLoad</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cc.setupEnvironment()\n",
     "spark = cc.startLocalCluster(\"dimSalesIncrementalLoad\")\n",
@@ -39,8 +49,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-09-20T13:13:10.908116Z",
-     "end_time": "2023-09-20T13:13:11.090306Z"
+     "end_time": "2024-09-03T11:15:58.588538200Z",
+     "start_time": "2024-09-03T11:15:33.927613Z"
     }
    }
   },
@@ -61,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "run_timestamp =datetime.now() #The job runtime is stored in a variable"
@@ -69,8 +79,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-09-20T13:13:14.655965Z",
-     "end_time": "2023-09-20T13:13:14.687211Z"
+     "end_time": "2024-09-03T11:17:21.698580500Z",
+     "start_time": "2024-09-03T11:17:21.680007700Z"
     }
    }
   },
@@ -85,10 +95,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+-------------+-------------+--------------------+--------------------+\n",
+      "|salesRepID|         name|       office|          salesRepSK|                 md5|\n",
+      "+----------+-------------+-------------+--------------------+--------------------+\n",
+      "|         5|     T. Mosby|       Berlin|d3858661-67e5-4fb...|947579dec8084039e...|\n",
+      "|         6|   H. Simpson|       Berlin|3ad7fdb8-02a2-467...|d636d1b0685650b34...|\n",
+      "|         7|   B. Stinson|San Fransisco|5880490b-03a6-4c3...|e726b2d8dc0cf9a6f...|\n",
+      "|         8|L. Hofstadter|     Brussels|b7c5e413-413e-421...|a2bbe52f8274b0f08...|\n",
+      "|         9|    S. Cooper|     Brussels|e28d311d-c5d3-412...|d85c73c9d03df0002...|\n",
+      "|        10| F. Underwood|     Brussels|76e8eb70-4124-41d...|44cd1a6d596b05688...|\n",
+      "|        11|     W. White|     New York|b86a98c1-b1a1-447...|f9ea69ce2aa4482b4...|\n",
+      "|        12| T. Lannister|     New York|d8c23730-aa18-44b...|3259a471f9816d7c3...|\n",
+      "|        13|      M. Ross|       London|1d1ba85a-a7ea-40c...|d0faf94c1bbe2d4a7...|\n",
+      "|         1|      R. Zane|       Berlin|e29017f3-ee76-462...|1f8cbbc272a33dcc1...|\n",
+      "|         2|   P. Chapman|       Berlin|e8dfac53-cfdb-436...|14b094c31bf9e4149...|\n",
+      "|         3|     F. Crane|     New York|cc52e5ac-765e-457...|0715f05df18a3a794...|\n",
+      "|         4|    R. Geller|     New York|e7b68ade-1c92-4e8...|6212c0ce01f144d66...|\n",
+      "+----------+-------------+-------------+--------------------+--------------------+\n"
+     ]
+    }
+   ],
    "source": [
-    "dt_dimSalesRep = DeltaTable.forPath(spark,\".\\spark-warehouse\\dimsalesrep\")\n",
+    "dt_dimSalesRep = DeltaTable.forPath(spark,\".\\\\spark-warehouse\\\\dimsalesrep\")\n",
     "\n",
     "dt_dimSalesRep.toDF().createOrReplaceTempView(\"dimSalesRep_current\")\n",
     "\n",
@@ -98,8 +132,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-09-20T13:14:46.562779Z",
-     "end_time": "2023-09-20T13:14:52.302594Z"
+     "end_time": "2024-09-03T11:18:14.976461100Z",
+     "start_time": "2024-09-03T11:18:11.737778900Z"
     }
    }
   },
@@ -128,17 +162,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 7,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+-----------------+-------------+-------------+--------------------+\n",
+      "|   source_salesRepSK|source_salesRepId|  source_name|source_office|          source_md5|\n",
+      "+--------------------+-----------------+-------------+-------------+--------------------+\n",
+      "|783faf4d-83ca-4c9...|                1|      R. Zane|       Berlin|1f8cbbc272a33dcc1...|\n",
+      "|02306d02-6bf3-455...|                2|   P. Chapman|       Berlin|14b094c31bf9e4149...|\n",
+      "|8c0d6326-6d5b-443...|                4|    R. Geller|     New York|6212c0ce01f144d66...|\n",
+      "|cf00619c-d6f3-402...|                3|     F. Crane|       Berlin|382ec0d8b8cd28ce4...|\n",
+      "|5844fbdf-5810-406...|                5|     T. Mosby|       Berlin|947579dec8084039e...|\n",
+      "|1e2f0cdc-12bb-4f8...|                6|   H. Simpson|       Berlin|d636d1b0685650b34...|\n",
+      "|e56bbe6d-e99b-4a0...|                7|   B. Stinson|San Fransisco|e726b2d8dc0cf9a6f...|\n",
+      "|d033b0db-3fa2-49f...|                8|L. Hofstadter|     Brussels|a2bbe52f8274b0f08...|\n",
+      "|18743c9c-ade8-482...|                9|    S. Cooper|     Brussels|d85c73c9d03df0002...|\n",
+      "|4d4c18ec-2005-419...|               10| F. Underwood|     Brussels|44cd1a6d596b05688...|\n",
+      "|ea470718-d64a-4cc...|               11|     W. White|     New York|f9ea69ce2aa4482b4...|\n",
+      "|df601306-693b-476...|               12| T. Lannister|     New York|3259a471f9816d7c3...|\n",
+      "|5e5c9246-0bd3-47c...|               13|      M. Ross|       London|d0faf94c1bbe2d4a7...|\n",
+      "+--------------------+-----------------+-------------+-------------+--------------------+\n"
+     ]
+    }
+   ],
    "source": [
     "cc.set_connection(\"tutorial_op\")\n",
     "\n",
     "#a. Reading from a JDBC source\n",
     "df_operational_sales_rep = spark.read \\\n",
     "    .format(\"jdbc\") \\\n",
-    "    .option(\"driver\" , \"com.microsoft.sqlserver.jdbc.SQLServerDriver\") \\\n",
+    "    .option(\"driver\" , cc.get_Property(\"driver\")) \\\n",
     "    .option(\"url\", cc.create_jdbc()) \\\n",
-    "    .option(\"dbtable\", \"dbo.salesrep\") \\\n",
+    "    .option(\"dbtable\", \"salesrep\") \\\n",
     "    .option(\"user\", cc.get_Property(\"username\")) \\\n",
     "    .option(\"password\", cc.get_Property(\"password\")) \\\n",
     "    .option(\"partitionColumn\", \"salesRepID\") \\\n",
@@ -168,8 +226,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-09-20T13:14:54.082875Z",
-     "end_time": "2023-09-20T13:14:54.368902Z"
+     "end_time": "2024-09-03T11:19:15.455457400Z",
+     "start_time": "2024-09-03T11:19:12.881702700Z"
     }
    }
   },
@@ -191,8 +249,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 8,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+-----------------+-----------+-------------+--------------------+--------------------+----------+--------+--------+-------------------+-------------------+--------------------+-------+\n",
+      "|   source_salesRepSK|source_salesRepId|source_name|source_office|          source_md5|          salesRepSK|salesrepid|    name|  office|          scd_start|            scd_end|                 md5|current|\n",
+      "+--------------------+-----------------+-----------+-------------+--------------------+--------------------+----------+--------+--------+-------------------+-------------------+--------------------+-------+\n",
+      "|cf00619c-d6f3-402...|                3|   F. Crane|       Berlin|382ec0d8b8cd28ce4...|cc52e5ac-765e-457...|         3|F. Crane|New York|1999-01-01 00:00:00|2100-12-12 00:00:00|0715f05df18a3a794...|   true|\n",
+      "+--------------------+-----------------+-----------+-------------+--------------------+--------------------+----------+--------+--------+-------------------+-------------------+--------------------+-------+\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "detectedChanges=spark.sql(f\"select * \\\n",
@@ -208,8 +278,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-09-20T13:15:02.218224Z",
-     "end_time": "2023-09-20T13:15:03.003956Z"
+     "end_time": "2024-09-03T11:19:22.749252800Z",
+     "start_time": "2024-09-03T11:19:21.006586100Z"
     }
    }
   },
@@ -229,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "\n",
@@ -259,15 +329,28 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-09-20T13:16:00.672450Z",
-     "end_time": "2023-09-20T13:16:00.807034Z"
+     "end_time": "2024-09-03T11:20:20.275004600Z",
+     "start_time": "2024-09-03T11:20:20.164808600Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+----------+--------+--------+--------------------+--------------------+--------------------+-------+\n",
+      "|          salesRepSK|salesRepID|    name|  office|           scd_start|             scd_end|                 md5|current|\n",
+      "+--------------------+----------+--------+--------+--------------------+--------------------+--------------------+-------+\n",
+      "|cf00619c-d6f3-402...|         3|F. Crane|  Berlin|2024-09-03 13:17:...| 2100-12-12 00:00:00|382ec0d8b8cd28ce4...|   true|\n",
+      "|cc52e5ac-765e-457...|         3|F. Crane|New York| 1999-01-01 00:00:00|2024-09-03 13:17:...|0715f05df18a3a794...|  false|\n",
+      "+--------------------+----------+--------+--------+--------------------+--------------------+--------------------+-------+\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "#DEBUG CODE TO SHOW CONTENT OF UPSERTS\n",
@@ -276,8 +359,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-09-20T13:16:11.462636Z",
-     "end_time": "2023-09-20T13:16:13.801576Z"
+     "end_time": "2024-09-03T11:20:29.679175800Z",
+     "start_time": "2024-09-03T11:20:26.018896Z"
     }
    }
   },
@@ -296,8 +379,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 11,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "DataFrame[num_affected_rows: bigint, num_updated_rows: bigint, num_deleted_rows: bigint, num_inserted_rows: bigint]"
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+----------+-------------+-------------+--------------------+--------------------+--------------------+-------+\n",
+      "|          salesRepSK|salesrepid|         name|       office|           scd_start|             scd_end|                 md5|current|\n",
+      "+--------------------+----------+-------------+-------------+--------------------+--------------------+--------------------+-------+\n",
+      "|e29017f3-ee76-462...|         1|      R. Zane|       Berlin| 1999-01-01 00:00:00| 2100-12-12 00:00:00|1f8cbbc272a33dcc1...|   true|\n",
+      "|e8dfac53-cfdb-436...|         2|   P. Chapman|       Berlin| 1999-01-01 00:00:00| 2100-12-12 00:00:00|14b094c31bf9e4149...|   true|\n",
+      "|cc52e5ac-765e-457...|         3|     F. Crane|     New York| 1999-01-01 00:00:00|2024-09-03 13:17:...|0715f05df18a3a794...|  false|\n",
+      "|cf00619c-d6f3-402...|         3|     F. Crane|       Berlin|2024-09-03 13:17:...| 2100-12-12 00:00:00|382ec0d8b8cd28ce4...|   true|\n",
+      "|e7b68ade-1c92-4e8...|         4|    R. Geller|     New York| 1999-01-01 00:00:00| 2100-12-12 00:00:00|6212c0ce01f144d66...|   true|\n",
+      "|d3858661-67e5-4fb...|         5|     T. Mosby|       Berlin| 1999-01-01 00:00:00| 2100-12-12 00:00:00|947579dec8084039e...|   true|\n",
+      "|3ad7fdb8-02a2-467...|         6|   H. Simpson|       Berlin| 1999-01-01 00:00:00| 2100-12-12 00:00:00|d636d1b0685650b34...|   true|\n",
+      "|5880490b-03a6-4c3...|         7|   B. Stinson|San Fransisco| 1999-01-01 00:00:00| 2100-12-12 00:00:00|e726b2d8dc0cf9a6f...|   true|\n",
+      "|b7c5e413-413e-421...|         8|L. Hofstadter|     Brussels| 1999-01-01 00:00:00| 2100-12-12 00:00:00|a2bbe52f8274b0f08...|   true|\n",
+      "|e28d311d-c5d3-412...|         9|    S. Cooper|     Brussels| 1999-01-01 00:00:00| 2100-12-12 00:00:00|d85c73c9d03df0002...|   true|\n",
+      "|76e8eb70-4124-41d...|        10| F. Underwood|     Brussels| 1999-01-01 00:00:00| 2100-12-12 00:00:00|44cd1a6d596b05688...|   true|\n",
+      "|b86a98c1-b1a1-447...|        11|     W. White|     New York| 1999-01-01 00:00:00| 2100-12-12 00:00:00|f9ea69ce2aa4482b4...|   true|\n",
+      "|d8c23730-aa18-44b...|        12| T. Lannister|     New York| 1999-01-01 00:00:00| 2100-12-12 00:00:00|3259a471f9816d7c3...|   true|\n",
+      "|1d1ba85a-a7ea-40c...|        13|      M. Ross|       London| 1999-01-01 00:00:00| 2100-12-12 00:00:00|d0faf94c1bbe2d4a7...|   true|\n",
+      "+--------------------+----------+-------------+-------------+--------------------+--------------------+--------------------+-------+\n"
+     ]
+    }
+   ],
    "source": [
     "spark.sql(\"MERGE INTO dimSalesRep_current AS target \\\n",
     "          using upserts AS source ON target.salesRepID = source.salesRepID and source.current = false and target.current=true \\\n",
@@ -310,8 +426,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-09-20T13:17:21.291860Z",
-     "end_time": "2023-09-20T13:17:25.580972Z"
+     "end_time": "2024-09-03T11:22:24.236785400Z",
+     "start_time": "2024-09-03T11:22:14.362383900Z"
     }
    }
   },
@@ -326,11 +442,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "outputs": [],
    "source": [
-    "#spark.stop()"
+    "spark.stop()"
    ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-09-03T11:22:45.966821400Z",
+     "start_time": "2024-09-03T11:22:45.573604100Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
