--- a/05_4_DWH_factSales.ipynb
+++ b/05_4_DWH_factSales.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "\n",
@@ -22,28 +22,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-09-20T14:14:17.996209Z",
-     "end_time": "2023-09-20T14:14:18.034318Z"
+     "end_time": "2024-09-03T11:23:08.162058500Z",
+     "start_time": "2024-09-03T11:23:07.890180600Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<pyspark.sql.session.SparkSession object at 0x0000025E32A85850>\n"
-     ]
-    },
-    {
      "data": {
-      "text/plain": "<pyspark.sql.session.SparkSession at 0x25e32a85850>",
-      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://AKDGPORT11191.admin.kdg.be:4040\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.4.0</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[*]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>factSales</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
+      "text/plain": "<pyspark.sql.session.SparkSession at 0x2587fbbda60>",
+      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://host.docker.internal:4041\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.5.2</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[*]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>factSales</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
      },
-     "execution_count": 14,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,8 +48,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-09-20T14:14:19.601900Z",
-     "end_time": "2023-09-20T14:14:19.693902Z"
+     "end_time": "2024-09-03T11:23:26.409772400Z",
+     "start_time": "2024-09-03T11:23:09.806014800Z"
     }
    }
   },
@@ -95,15 +88,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "cc.set_connection(\"default\")\n",
     "sale_src_df = spark.read \\\n",
     "    .format(\"jdbc\") \\\n",
     "    .option(\"url\", cc.create_jdbc()) \\\n",
-    "    .option(\"driver\" , \"com.microsoft.sqlserver.jdbc.SQLServerDriver\") \\\n",
-    "    .option(\"dbtable\", \"dbo.sales\") \\\n",
+    "    .option(\"driver\" , cc.get_Property(\"driver\")) \\\n",
+    "    .option(\"dbtable\", \"sales\") \\\n",
     "    .option(\"user\", cc.get_Property(\"username\")) \\\n",
     "    .option(\"password\", cc.get_Property(\"password\")) \\\n",
     "    .option(\"partitionColumn\", \"Order_ID\") \\\n",
@@ -118,8 +111,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-09-20T14:55:03.154631Z",
-     "end_time": "2023-09-20T14:55:03.214083Z"
+     "end_time": "2024-09-03T11:23:46.978474Z",
+     "start_time": "2024-09-03T11:23:43.710406300Z"
     }
    }
   },
@@ -131,12 +124,11 @@
    ],
    "metadata": {
     "collapsed": false
-   },
-   "execution_count": 1
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "dim_date = spark.read.format(\"delta\").load(\"spark-warehouse/dimdate\")\n",
@@ -147,8 +139,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-09-20T14:55:05.848698Z",
-     "end_time": "2023-09-20T14:55:05.911201Z"
+     "end_time": "2024-09-03T11:31:14.390811300Z",
+     "start_time": "2024-09-03T11:31:07.735868800Z"
     }
    }
   },
@@ -164,12 +156,11 @@
    ],
    "metadata": {
     "collapsed": false
-   },
-   "outputs": []
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -178,19 +169,17 @@
       "+-------+------+--------------------+--------+----------+--------------------+\n",
       "|OrderID|dateSK|          salesrepSK|count_mv|revenue_mv|                 md5|\n",
       "+-------+------+--------------------+--------+----------+--------------------+\n",
-      "|     57|   866|4b7542d1-f37c-497...|       1| 778297706|2150305dc098e07de...|\n",
-      "|     58|   320|4b7542d1-f37c-497...|       1|2100696115|53e902b9d629657aa...|\n",
-      "|     59|  1012|4b7542d1-f37c-497...|       1| 642114638|53f9040871c3ba0c2...|\n",
-      "|     60|  1375|4b7542d1-f37c-497...|       1|1440206513|bca991caefd0fe406...|\n",
-      "|     61|   954|4b7542d1-f37c-497...|       1|1244596895|e50401a2ecae16151...|\n",
-      "|     62|   957|4b7542d1-f37c-497...|       1|1662557955|ee20c8bbf2d348df4...|\n",
-      "|     63|    62|4b7542d1-f37c-497...|       1| 844183988|f380732388a1164b5...|\n",
-      "|     64|   229|4b7542d1-f37c-497...|       1| 681975050|5a4559c3a230a15f3...|\n",
-      "|     65|   684|4b7542d1-f37c-497...|       1|1504576144|a2e63a4c4057e7958...|\n",
-      "|     66|   876|4b7542d1-f37c-497...|       1| 622992265|28b244a851aed9950...|\n",
-      "+-------+------+--------------------+--------+----------+--------------------+\n",
-      "only showing top 10 rows\n",
-      "\n"
+      "|      1|   650|e29017f3-ee76-462...|       1| 851804379|6e8de602838d31192...|\n",
+      "|      2|  1369|e29017f3-ee76-462...|       1| 683057055|48ec86cac5a62d038...|\n",
+      "|      3|   920|e29017f3-ee76-462...|       1|1732115679|de3629828fb3a84b6...|\n",
+      "|      4|   604|e29017f3-ee76-462...|       1|1275042249|1eab0e382551878fa...|\n",
+      "|      5|   897|e29017f3-ee76-462...|       1| 694153767|2dd11e3404f663f9a...|\n",
+      "|      6|   812|e29017f3-ee76-462...|       1|1959464599|d25ac79b971382a47...|\n",
+      "|      7|   421|e29017f3-ee76-462...|       1|1170677605|61d43c8ee34339b4b...|\n",
+      "|      8|   691|e29017f3-ee76-462...|       1|1588502393|329cb83447f61cdcb...|\n",
+      "|      9|  1254|e29017f3-ee76-462...|       1|1173163372|76f9615aff1703787...|\n",
+      "|     10|  1311|e29017f3-ee76-462...|       1| 788682390|c6ef1d370564d4eeb...|\n",
+      "+-------+------+--------------------+--------+----------+--------------------+\n"
      ]
     }
    ],
@@ -210,8 +199,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-09-20T14:55:08.678059Z",
-     "end_time": "2023-09-20T14:55:10.162611Z"
+     "end_time": "2024-09-03T11:32:08.931083Z",
+     "start_time": "2024-09-03T11:31:56.061151600Z"
     }
    }
   },
@@ -228,18 +217,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "\n",
-    "#salesFactFromSource.write.format(\"delta\").mode(\"overwrite\").saveAsTable(\"factSales\")\n",
+    "salesFactFromSource.write.format(\"delta\").mode(\"overwrite\").saveAsTable(\"factSales\")\n",
     "\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-09-20T14:26:12.710635Z",
-     "end_time": "2023-09-20T14:26:20.957065Z"
+     "end_time": "2024-09-03T11:33:05.367829800Z",
+     "start_time": "2024-09-03T11:32:55.948419500Z"
     }
    }
   },
@@ -266,8 +255,7 @@
       "|num_affected_rows|num_updated_rows|num_deleted_rows|num_inserted_rows|\n",
       "+-----------------+----------------+----------------+-----------------+\n",
       "|                1|               0|               0|                1|\n",
-      "+-----------------+----------------+----------------+-----------------+\n",
-      "\n"
+      "+-----------------+----------------+----------------+-----------------+\n"
      ]
     }
    ],
@@ -293,24 +281,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+--------+\n",
-      "|count(1)|\n",
-      "+--------+\n",
-      "|    1001|\n",
-      "+--------+\n",
-      "\n",
-      "+-------+------+--------------------+--------+----------+--------------------+\n",
-      "|OrderID|dateSK|          salesrepSK|count_mv|revenue_mv|                 md5|\n",
-      "+-------+------+--------------------+--------+----------+--------------------+\n",
-      "|      1|  5405|20c5b991-3e36-4a3...|       1|       100|026257428dfcb7829...|\n",
-      "+-------+------+--------------------+--------+----------+--------------------+\n",
-      "\n"
+     "ename": "AnalysisException",
+     "evalue": "[TABLE_OR_VIEW_NOT_FOUND] The table or view `factsales` cannot be found. Verify the spelling and correctness of the schema and catalog.\nIf you did not qualify the name with a schema, verify the current_schema() output, or qualify the name with the correct schema and catalog.\nTo tolerate the error on drop use DROP VIEW IF EXISTS or DROP TABLE IF EXISTS.; line 1 pos 21;\n'Aggregate [unresolvedalias(count(1), None)]\n+- 'UnresolvedRelation [factsales], [], false\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mAnalysisException\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[6], line 4\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;66;03m# IMPORTANT: ALWAYS TEST THE CREATED CODE.\u001B[39;00m\n\u001B[0;32m      2\u001B[0m \u001B[38;5;66;03m# In this example I changed order 498 in the operational database and checked the change after the run.\u001B[39;00m\n\u001B[0;32m      3\u001B[0m \u001B[38;5;66;03m# spark.sql(\"select * from factsales f join dimsalesrep ds on f.salesrepSK = ds.salesrepSK where OrderID = 192  \").show()\u001B[39;00m\n\u001B[1;32m----> 4\u001B[0m \u001B[43mspark\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43msql\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mselect count(*) from factsales\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m\u001B[38;5;241m.\u001B[39mshow()\n\u001B[0;32m      5\u001B[0m spark\u001B[38;5;241m.\u001B[39msql(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mselect * from factsales where orderId=1\u001B[39m\u001B[38;5;124m\"\u001B[39m)\u001B[38;5;241m.\u001B[39mshow()\n",
+      "File \u001B[1;32mC:\\DevApps\\Python312PysparkENV\\Lib\\site-packages\\pyspark\\sql\\session.py:1631\u001B[0m, in \u001B[0;36mSparkSession.sql\u001B[1;34m(self, sqlQuery, args, **kwargs)\u001B[0m\n\u001B[0;32m   1627\u001B[0m         \u001B[38;5;28;01massert\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_jvm \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m\n\u001B[0;32m   1628\u001B[0m         litArgs \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_jvm\u001B[38;5;241m.\u001B[39mPythonUtils\u001B[38;5;241m.\u001B[39mtoArray(\n\u001B[0;32m   1629\u001B[0m             [_to_java_column(lit(v)) \u001B[38;5;28;01mfor\u001B[39;00m v \u001B[38;5;129;01min\u001B[39;00m (args \u001B[38;5;129;01mor\u001B[39;00m [])]\n\u001B[0;32m   1630\u001B[0m         )\n\u001B[1;32m-> 1631\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m DataFrame(\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_jsparkSession\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43msql\u001B[49m\u001B[43m(\u001B[49m\u001B[43msqlQuery\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mlitArgs\u001B[49m\u001B[43m)\u001B[49m, \u001B[38;5;28mself\u001B[39m)\n\u001B[0;32m   1632\u001B[0m \u001B[38;5;28;01mfinally\u001B[39;00m:\n\u001B[0;32m   1633\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mlen\u001B[39m(kwargs) \u001B[38;5;241m>\u001B[39m \u001B[38;5;241m0\u001B[39m:\n",
+      "File \u001B[1;32mC:\\DevApps\\Python312PysparkENV\\Lib\\site-packages\\py4j\\java_gateway.py:1322\u001B[0m, in \u001B[0;36mJavaMember.__call__\u001B[1;34m(self, *args)\u001B[0m\n\u001B[0;32m   1316\u001B[0m command \u001B[38;5;241m=\u001B[39m proto\u001B[38;5;241m.\u001B[39mCALL_COMMAND_NAME \u001B[38;5;241m+\u001B[39m\\\n\u001B[0;32m   1317\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mcommand_header \u001B[38;5;241m+\u001B[39m\\\n\u001B[0;32m   1318\u001B[0m     args_command \u001B[38;5;241m+\u001B[39m\\\n\u001B[0;32m   1319\u001B[0m     proto\u001B[38;5;241m.\u001B[39mEND_COMMAND_PART\n\u001B[0;32m   1321\u001B[0m answer \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mgateway_client\u001B[38;5;241m.\u001B[39msend_command(command)\n\u001B[1;32m-> 1322\u001B[0m return_value \u001B[38;5;241m=\u001B[39m \u001B[43mget_return_value\u001B[49m\u001B[43m(\u001B[49m\n\u001B[0;32m   1323\u001B[0m \u001B[43m    \u001B[49m\u001B[43manswer\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mgateway_client\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mtarget_id\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mname\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m   1325\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m temp_arg \u001B[38;5;129;01min\u001B[39;00m temp_args:\n\u001B[0;32m   1326\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mhasattr\u001B[39m(temp_arg, \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m_detach\u001B[39m\u001B[38;5;124m\"\u001B[39m):\n",
+      "File \u001B[1;32mC:\\DevApps\\Python312PysparkENV\\Lib\\site-packages\\pyspark\\errors\\exceptions\\captured.py:185\u001B[0m, in \u001B[0;36mcapture_sql_exception.<locals>.deco\u001B[1;34m(*a, **kw)\u001B[0m\n\u001B[0;32m    181\u001B[0m converted \u001B[38;5;241m=\u001B[39m convert_exception(e\u001B[38;5;241m.\u001B[39mjava_exception)\n\u001B[0;32m    182\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;28misinstance\u001B[39m(converted, UnknownException):\n\u001B[0;32m    183\u001B[0m     \u001B[38;5;66;03m# Hide where the exception came from that shows a non-Pythonic\u001B[39;00m\n\u001B[0;32m    184\u001B[0m     \u001B[38;5;66;03m# JVM exception message.\u001B[39;00m\n\u001B[1;32m--> 185\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m converted \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m\n\u001B[0;32m    186\u001B[0m \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[0;32m    187\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m\n",
+      "\u001B[1;31mAnalysisException\u001B[0m: [TABLE_OR_VIEW_NOT_FOUND] The table or view `factsales` cannot be found. Verify the spelling and correctness of the schema and catalog.\nIf you did not qualify the name with a schema, verify the current_schema() output, or qualify the name with the correct schema and catalog.\nTo tolerate the error on drop use DROP VIEW IF EXISTS or DROP TABLE IF EXISTS.; line 1 pos 21;\n'Aggregate [unresolvedalias(count(1), None)]\n+- 'UnresolvedRelation [factsales], [], false\n"
      ]
     }
    ],
@@ -325,8 +309,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-09-20T15:00:55.998584Z",
-     "end_time": "2023-09-20T15:00:59.102741Z"
+     "end_time": "2024-09-03T11:32:36.554991400Z",
+     "start_time": "2024-09-03T11:32:36.264040100Z"
     }
    }
   },
