--- a/02_0_TASK_2_sparkSQL_SOLUTION.ipynb
+++ b/02_0_TASK_2_sparkSQL_SOLUTION.ipynb
@@ -2,28 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "start_time": "2023-08-31T14:30:38.652887Z",
-     "end_time": "2023-08-31T14:31:43.612851Z"
+     "end_time": "2024-09-03T12:08:19.991333700Z",
+     "start_time": "2024-09-03T12:08:04.220103Z"
     }
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<pyspark.sql.session.SparkSession object at 0x000001DF56BAB550>\n"
-     ]
-    },
-    {
      "data": {
-      "text/plain": "<pyspark.sql.session.SparkSession at 0x1df56bab550>",
-      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://AKDGPORT11191.mshome.net:4041\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.4.0</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[*]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>SQLExcersice</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
+      "text/plain": "<pyspark.sql.session.SparkSession at 0x254fcd76810>",
+      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://host.docker.internal:4042\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.5.2</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[*]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>SQLExcersice</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,9 +56,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "outputs": [],
    "source": [
+    "#Extract \n",
     "df = spark.read.format(\"csv\") \\\n",
     "  .option(\"header\", \"true\") \\\n",
     "  .option(\"inferSchema\", \"true\") \\\n",
@@ -74,8 +68,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-08-31T14:31:43.617865Z",
-     "end_time": "2023-08-31T14:31:50.554853Z"
+     "end_time": "2024-09-03T12:08:26.104700700Z",
+     "start_time": "2024-09-03T12:08:19.976290900Z"
     }
    }
   },
@@ -91,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -102,8 +96,7 @@
       " |-- name: string (nullable = true)\n",
       " |-- department: string (nullable = true)\n",
       " |-- salary: integer (nullable = true)\n",
-      " |-- hire_date: date (nullable = true)\n",
-      "\n"
+      " |-- hire_date: date (nullable = true)\n"
      ]
     }
    ],
@@ -113,8 +106,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-08-31T14:31:50.556853Z",
-     "end_time": "2023-08-31T14:31:50.568853Z"
+     "end_time": "2024-09-03T12:08:26.136822400Z",
+     "start_time": "2024-09-03T12:08:26.109714300Z"
     }
    }
   },
@@ -130,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "df.createOrReplaceTempView(\"tbl_employees\")"
@@ -138,8 +131,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-08-31T14:31:50.574854Z",
-     "end_time": "2023-08-31T14:31:50.756850Z"
+     "end_time": "2024-09-03T12:08:26.215430300Z",
+     "start_time": "2024-09-03T12:08:26.123822300Z"
     }
    }
   },
@@ -157,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -167,8 +160,7 @@
       "|count|\n",
       "+-----+\n",
       "|   10|\n",
-      "+-----+\n",
-      "\n"
+      "+-----+\n"
      ]
     }
    ],
@@ -178,14 +170,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-08-31T14:31:50.673855Z",
-     "end_time": "2023-08-31T14:31:51.707855Z"
+     "end_time": "2024-09-03T12:08:27.141502200Z",
+     "start_time": "2024-09-03T12:08:26.202902800Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -195,8 +187,7 @@
       "|count(employee_id)|\n",
       "+------------------+\n",
       "|                10|\n",
-      "+------------------+\n",
-      "\n"
+      "+------------------+\n"
      ]
     }
    ],
@@ -206,8 +197,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-08-31T14:31:51.711855Z",
-     "end_time": "2023-08-31T14:31:52.294868Z"
+     "end_time": "2024-09-03T12:08:27.911591400Z",
+     "start_time": "2024-09-03T12:08:27.114963300Z"
     }
    }
   },
@@ -224,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
@@ -234,8 +225,7 @@
       "|avg(salary)|\n",
       "+-----------+\n",
       "|     4820.0|\n",
-      "+-----------+\n",
-      "\n"
+      "+-----------+\n"
      ]
     }
    ],
@@ -246,14 +236,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-08-31T14:31:52.294868Z",
-     "end_time": "2023-08-31T14:31:52.830855Z"
+     "end_time": "2024-09-03T12:08:29.019039700Z",
+     "start_time": "2024-09-03T12:08:27.887044Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
@@ -263,8 +253,7 @@
       "|avg(salary)|\n",
       "+-----------+\n",
       "|     4820.0|\n",
-      "+-----------+\n",
-      "\n"
+      "+-----------+\n"
      ]
     }
    ],
@@ -274,18 +263,22 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-08-31T14:31:52.835858Z",
-     "end_time": "2023-08-31T14:31:53.295859Z"
+     "end_time": "2024-09-03T12:08:29.464867100Z",
+     "start_time": "2024-09-03T12:08:29.006953500Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-09-03T12:08:29.613524200Z",
+     "start_time": "2024-09-03T12:08:29.461864500Z"
+    }
    }
   },
   {
@@ -301,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
@@ -328,8 +321,7 @@
       "+- HashAggregate(keys=[], functions=[avg(salary#20)], output=[avg(salary)#91])\n",
       "   +- Exchange SinglePartition, ENSURE_REQUIREMENTS, [plan_id=159]\n",
       "      +- HashAggregate(keys=[], functions=[partial_avg(salary#20)], output=[sum#95, count#96L])\n",
-      "         +- FileScan csv [salary#20] Batched: false, DataFilters: [], Format: CSV, Location: InMemoryFileIndex(1 paths)[file:/C:/DevProjects/Databricks/FileStore/tables/employees.csv], PartitionFilters: [], PushedFilters: [], ReadSchema: struct<salary:int>\n",
-      "\n"
+      "         +- FileScan csv [salary#20] Batched: false, DataFilters: [], Format: CSV, Location: InMemoryFileIndex(1 paths)[file:/C:/DevProjects/Databricks/FileStore/tables/employees.csv], PartitionFilters: [], PushedFilters: [], ReadSchema: struct<salary:int>\n"
      ]
     }
    ],
@@ -339,8 +331,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-08-31T14:31:53.260874Z",
-     "end_time": "2023-08-31T14:31:53.438857Z"
+     "end_time": "2024-09-03T12:08:29.706118700Z",
+     "start_time": "2024-09-03T12:08:29.483866300Z"
     }
    }
   },
@@ -369,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
@@ -404,8 +396,7 @@
       "+- HashAggregate(keys=[department#19], functions=[max(salary#20)], output=[department#19, highest_salary#121])\n",
       "   +- Exchange hashpartitioning(department#19, 4), ENSURE_REQUIREMENTS, [plan_id=213]\n",
       "      +- HashAggregate(keys=[department#19], functions=[partial_max(salary#20)], output=[department#19, max#126])\n",
-      "         +- FileScan csv [department#19,salary#20] Batched: false, DataFilters: [], Format: CSV, Location: InMemoryFileIndex(1 paths)[file:/C:/DevProjects/Databricks/FileStore/tables/employees.csv], PartitionFilters: [], PushedFilters: [], ReadSchema: struct<department:string,salary:int>\n",
-      "\n"
+      "         +- FileScan csv [department#19,salary#20] Batched: false, DataFilters: [], Format: CSV, Location: InMemoryFileIndex(1 paths)[file:/C:/DevProjects/Databricks/FileStore/tables/employees.csv], PartitionFilters: [], PushedFilters: [], ReadSchema: struct<department:string,salary:int>\n"
      ]
     }
    ],
@@ -419,8 +410,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-08-31T14:31:53.402863Z",
-     "end_time": "2023-08-31T14:31:55.008855Z"
+     "end_time": "2024-09-03T12:08:31.083938100Z",
+     "start_time": "2024-09-03T12:08:29.590966300Z"
     }
    }
   },
@@ -435,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
@@ -474,8 +465,7 @@
       "   +- Exchange hashpartitioning(_groupingexpression#158, 4), ENSURE_REQUIREMENTS, [plan_id=276]\n",
       "      +- HashAggregate(keys=[_groupingexpression#158], functions=[partial_sum(salary#20)], output=[_groupingexpression#158, sum#160L])\n",
       "         +- Project [salary#20, year(hire_date#21) AS _groupingexpression#158]\n",
-      "            +- FileScan csv [salary#20,hire_date#21] Batched: false, DataFilters: [], Format: CSV, Location: InMemoryFileIndex(1 paths)[file:/C:/DevProjects/Databricks/FileStore/tables/employees.csv], PartitionFilters: [], PushedFilters: [], ReadSchema: struct<salary:int,hire_date:date>\n",
-      "\n"
+      "            +- FileScan csv [salary#20,hire_date#21] Batched: false, DataFilters: [], Format: CSV, Location: InMemoryFileIndex(1 paths)[file:/C:/DevProjects/Databricks/FileStore/tables/employees.csv], PartitionFilters: [], PushedFilters: [], ReadSchema: struct<salary:int,hire_date:date>\n"
      ]
     }
    ],
@@ -488,8 +478,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-08-31T14:31:55.005855Z",
-     "end_time": "2023-08-31T14:31:56.008862Z"
+     "end_time": "2024-09-03T12:08:31.966872Z",
+     "start_time": "2024-09-03T12:08:31.039937400Z"
     }
    }
   },
@@ -513,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
@@ -561,8 +551,7 @@
       "               :  +- Filter isnotnull(employee_id#17)\n",
       "               :     +- FileScan csv [employee_id#17] Batched: false, DataFilters: [isnotnull(employee_id#17)], Format: CSV, Location: InMemoryFileIndex(1 paths)[file:/C:/DevProjects/Databricks/FileStore/tables/employees.csv], PartitionFilters: [], PushedFilters: [IsNotNull(employee_id)], ReadSchema: struct<employee_id:int>\n",
       "               +- Filter isnotnull(emp_id#161)\n",
-      "                  +- FileScan parquet [emp_id#161,postal_code#162] Batched: true, DataFilters: [isnotnull(emp_id#161)], Format: Parquet, Location: InMemoryFileIndex(1 paths)[file:/C:/DevProjects/Databricks/FileStore/tables/empPostalCodes], PartitionFilters: [], PushedFilters: [IsNotNull(emp_id)], ReadSchema: struct<emp_id:string,postal_code:string>\n",
-      "\n"
+      "                  +- FileScan parquet [emp_id#161,postal_code#162] Batched: true, DataFilters: [isnotnull(emp_id#161)], Format: Parquet, Location: InMemoryFileIndex(1 paths)[file:/C:/DevProjects/Databricks/FileStore/tables/empPostalCodes], PartitionFilters: [], PushedFilters: [IsNotNull(emp_id)], ReadSchema: struct<emp_id:string,postal_code:string>\n"
      ]
     }
    ],
@@ -575,8 +564,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-08-31T14:31:56.014853Z",
-     "end_time": "2023-08-31T14:31:57.777856Z"
+     "end_time": "2024-09-03T12:08:33.438295700Z",
+     "start_time": "2024-09-03T12:08:31.926892200Z"
     }
    }
   },
@@ -591,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "df_empPerPc.write.format(\"delta\").mode(\"overwrite\").saveAsTable(\"employeesPerPostalCode\")"
@@ -599,8 +588,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-08-31T14:31:57.777856Z",
-     "end_time": "2023-08-31T14:32:18.031853Z"
+     "end_time": "2024-09-03T12:08:52.015982Z",
+     "start_time": "2024-09-03T12:08:33.429296Z"
     }
    }
   },
@@ -615,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "#df_PC =spark.read.format(\"csv\").option(\"header\", \"true\").load(\"./FileStore/tables/empPostalCodes.csv\")\n",
@@ -624,8 +613,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-08-31T14:32:18.033858Z",
-     "end_time": "2023-08-31T14:32:18.047855Z"
+     "end_time": "2024-09-03T12:08:52.051694500Z",
+     "start_time": "2024-09-03T12:08:52.018816200Z"
     }
    }
   }
