--- a/03_0_TASK_3_DeltaTable.ipynb
+++ b/03_0_TASK_3_DeltaTable.ipynb
@@ -49,7 +49,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Persist a detlatable to disk based on the CSV transactions.csv\n",
+    "# Persist a deltatable to disk based on the CSV transactions.csv\n",
     "Read the CSV file transaction_data_path\n",
     "Write it as a Delta table to transaction_delta_path\n",
     "Use inferSchema option (see: https://sparkbyexamples.com/pyspark/pyspark-read-csv-file-into-dataframe/) to automatically infer the schema from the CSV file. Otherwise all columns will be of type string"
