--- a/05_2_DWH_dimSalesRep_Initial.ipynb
+++ b/05_2_DWH_dimSalesRep_Initial.ipynb
@@ -11,54 +11,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [],
-   "source": [
-    "import random\n",
-    "import pyspark\n",
-    "from pyspark.sql import SparkSession, functions\n",
-    "import ConnectionConfig as cc\n",
-    "from pyspark.sql.functions import *"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-09-25T10:08:46.961417Z",
-     "end_time": "2023-09-25T10:08:46.961417Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<pyspark.sql.session.SparkSession object at 0x00000188FE41C730>\n"
+      "ALLUSERSPROFILE: C:\\ProgramData\n",
+      "APPDATA: C:\\Users\\overvelj\\AppData\\Roaming\n",
+      "COMMONPROGRAMFILES: C:\\Program Files\\Common Files\n",
+      "COMMONPROGRAMFILES(X86): C:\\Program Files (x86)\\Common Files\n",
+      "COMMONPROGRAMW6432: C:\\Program Files\\Common Files\n",
+      "COMPUTERNAME: AKDGPORT11191\n",
+      "COMSPEC: C:\\WINDOWS\\system32\\cmd.exe\n",
+      "DRIVERDATA: C:\\Windows\\System32\\Drivers\\DriverData\n",
+      "EFC_10528: 0\n",
+      "FPS_BROWSER_APP_PROFILE_STRING: Internet Explorer\n",
+      "FPS_BROWSER_USER_PROFILE_STRING: Default\n",
+      "HOMEDRIVE: C:\n",
+      "HOMEPATH: \\Users\\overvelj\n",
+      "IDEA_INITIAL_DIRECTORY: C:\\WINDOWS\\system32\n",
+      "IPY_INTERRUPT_EVENT: 1928\n",
+      "JAVA_HOME: C:\\Program Files\\Java\\jdk-11\\\n",
+      "JPY_INTERRUPT_EVENT: 1928\n",
+      "JPY_PARENT_PID: 1916\n",
+      "JPY_SESSION_NAME: 05_2_DWH_dimSalesRep_Initial.ipynb\n",
+      "LANG: en_US.UTF-8\n",
+      "LANGUAGE: \n",
+      "LC_ALL: en_US.UTF-8\n",
+      "LOCALAPPDATA: C:\\Users\\overvelj\\AppData\\Local\n",
+      "LOGONSERVER: \\\\CDCDCADM01\n",
+      "NUMBER_OF_PROCESSORS: 8\n",
+      "ONEDRIVE: C:\\Users\\overvelj\\OneDrive - Karel de Grote Hogeschool\n",
+      "ONEDRIVECOMMERCIAL: C:\\Users\\overvelj\\OneDrive - Karel de Grote Hogeschool\n",
+      "OS: Windows_NT\n",
+      "PATH: C:\\DevApps\\Python312PysparkENV\\Scripts;C:\\Program Files\\Common Files\\Oracle\\Java\\javapath;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapath;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python311;C:\\Program Files\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\WINDOWS\\system32;C:\\WINDOWS;C:\\WINDOWS\\System32\\Wbem;C:\\WINDOWS\\System32\\WindowsPowerShell\\v1.0\\;C:\\WINDOWS\\System32\\OpenSSH\\;C:\\Program Files (x86)\\Microsoft SQL Server\\150\\DTS\\Binn\\;C:\\Program Files\\dotnet\\;C:\\Program Files\\Graphviz\\bin;C:\\Program Files\\mongosh\\;C:\\Program Files\\MongoDB\\Server\\5.0\\bin;C:\\DevApps\\VENV309_DS2\\\\Scripts;C:\\Program Files\\Microsoft SQL Server\\Client SDK\\ODBC\\170\\Tools\\Binn\\;C:\\DevApps\\gradle-7.6\\bin;C:\\Program Files\\Docker\\Docker\\resources\\bin;C:\\Program Files\\Amazon\\AWSCLIV2\\;C:\\Program Files\\nodejs\\;C:\\Program Files\\Git\\cmd;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python312\\Scripts\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python312\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Launcher\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\Scripts\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\;C:\\Users\\overvelj\\AppData\\Local\\Microsoft\\WindowsApps;C:\\Users\\overvelj\\.dotnet\\tools;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Microsoft VS Code\\bin;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Git\\cmd;C:\\Program Files\\mongosh\\;C:\\Users\\overvelj\\AppData\\Local\\JetBrains\\Toolbox\\scripts;C:\\Users\\overvelj\\AppData\\Roaming\\npm;C:\\Users\\overvelj\\AppData\\Local\\Microsoft\\WindowsApps;;C:\\DevApps\\bigdatatools\\spark-3.5.2-bin-hadoop3\\bin;C:\\DevApps\\bigdatatools\\hadoop-3.4.0-win10-x64\\bin;C:\\Program Files\\Java\\jdk-11\\bin\n",
+      "PATHEXT: .COM;.EXE;.BAT;.CMD;.VBS;.VBE;.JS;.JSE;.WSF;.WSH;.MSC;.PY;.PYW\n",
+      "PROCESSOR_ARCHITECTURE: AMD64\n",
+      "PROCESSOR_IDENTIFIER: Intel64 Family 6 Model 142 Stepping 12, GenuineIntel\n",
+      "PROCESSOR_LEVEL: 6\n",
+      "PROCESSOR_REVISION: 8e0c\n",
+      "PROGRAMDATA: C:\\ProgramData\n",
+      "PROGRAMFILES: C:\\Program Files\n",
+      "PROGRAMFILES(X86): C:\\Program Files (x86)\n",
+      "PROGRAMW6432: C:\\Program Files\n",
+      "PROMPT: (Python312PysparkENV) $P$G\n",
+      "PSDISTRICT_BOOTIMAGEVERSION: CCM002C6\n",
+      "PSDISTRICT_DEPLOYMENTID: CCM00B0B\n",
+      "PSDISTRICT_INSTALLATIONDATE: 20200814-15:15:29\n",
+      "PSDISTRICT_INSTALLATIONMETHOD: PXE\n",
+      "PSDISTRICT_OFFICEINSTALL: clicktorun2016\n",
+      "PSDISTRICT_SITECODE: CCM\n",
+      "PSDISTRICT_TAAK: domein\n",
+      "PSDISTRICT_TATTOOSCRIPTVERSION: 1.4.3\n",
+      "PSDISTRICT_TSID: CCM00B0B\n",
+      "PSDISTRICT_TSNAME: KdG_W10_1909_Prod_200612.02\n",
+      "PSDISTRICT_UNATTEND: win10ent64-nl-BE-Admin.xml\n",
+      "PSMODULEPATH: C:\\Program Files\\WindowsPowerShell\\Modules;C:\\WINDOWS\\system32\\WindowsPowerShell\\v1.0\\Modules\n",
+      "PUBLIC: C:\\Users\\Public\n",
+      "PYTHONPATH: C:\\DevProjects\\Databricks\n",
+      "SESSIONNAME: Console\n",
+      "SYSTEMDRIVE: C:\n",
+      "SYSTEMROOT: C:\\WINDOWS\n",
+      "TEMP: C:\\Users\\overvelj\\AppData\\Local\\Temp\n",
+      "TMP: C:\\Users\\overvelj\\AppData\\Local\\Temp\n",
+      "UATDATA: C:\\WINDOWS\\CCM\\UATData\\D9F8C395-CAB8-491d-B8AC-179A1FE1BE77\n",
+      "USERDNSDOMAIN: ADMIN.KDG.BE\n",
+      "USERDOMAIN: ADMIN\n",
+      "USERDOMAIN_ROAMINGPROFILE: ADMIN\n",
+      "USERNAME: overvelj\n",
+      "USERPROFILE: C:\\Users\\overvelj\n",
+      "VIRTUAL_ENV: C:\\DevApps\\Python312PysparkENV\n",
+      "WINDIR: C:\\WINDOWS\n",
+      "ZES_ENABLE_SYSMAN: 1\n",
+      "_OLD_VIRTUAL_PATH: C:\\Program Files\\Common Files\\Oracle\\Java\\javapath;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapath;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python311;C:\\Program Files\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\WINDOWS\\system32;C:\\WINDOWS;C:\\WINDOWS\\System32\\Wbem;C:\\WINDOWS\\System32\\WindowsPowerShell\\v1.0\\;C:\\WINDOWS\\System32\\OpenSSH\\;C:\\Program Files (x86)\\Microsoft SQL Server\\150\\DTS\\Binn\\;C:\\Program Files\\dotnet\\;C:\\Program Files\\Graphviz\\bin;C:\\Program Files\\mongosh\\;C:\\Program Files\\MongoDB\\Server\\5.0\\bin;C:\\DevApps\\VENV309_DS2\\\\Scripts;C:\\Program Files\\Microsoft SQL Server\\Client SDK\\ODBC\\170\\Tools\\Binn\\;C:\\DevApps\\gradle-7.6\\bin;C:\\Program Files\\Docker\\Docker\\resources\\bin;C:\\Program Files\\Amazon\\AWSCLIV2\\;C:\\Program Files\\nodejs\\;C:\\Program Files\\Git\\cmd;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python312\\Scripts\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python312\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Launcher\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\Scripts\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\;C:\\Users\\overvelj\\AppData\\Local\\Microsoft\\WindowsApps;C:\\Users\\overvelj\\.dotnet\\tools;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Microsoft VS Code\\bin;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Git\\cmd;C:\\Program Files\\mongosh\\;C:\\Users\\overvelj\\AppData\\Local\\JetBrains\\Toolbox\\scripts;C:\\Users\\overvelj\\AppData\\Roaming\\npm;C:\\Users\\overvelj\\AppData\\Local\\Microsoft\\WindowsApps;\n",
+      "_OLD_VIRTUAL_PROMPT: $P$G\n",
+      "PYDEVD_USE_FRAME_EVAL: NO\n",
+      "TERM: xterm-color\n",
+      "CLICOLOR: 1\n",
+      "FORCE_COLOR: 1\n",
+      "CLICOLOR_FORCE: 1\n",
+      "PAGER: cat\n",
+      "GIT_PAGER: cat\n",
+      "MPLBACKEND: module://matplotlib_inline.backend_inline\n",
+      "PYSPARK_PYTHON: python\n",
+      "SPARK_HOME: C:\\DevApps\\bigdatatools\\spark-3.5.2-bin-hadoop3\n",
+      "HADOOP_HOME: C:\\DevApps\\bigdatatools\\hadoop-3.4.0-win10-x64\n",
+      "PYSPARK_HADOOP_VERSION: 3\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "import random\n",
+    "import pyspark\n",
+    "from pyspark.sql import SparkSession, functions\n",
+    "import ConnectionConfig as cc\n",
+    "from pyspark.sql.functions import *\n",
+    "cc.setupEnvironment()\n",
+    "cc.listEnvironment()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-09-03T10:51:38.865144500Z",
+     "start_time": "2024-09-03T10:51:38.612160400Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
     {
      "data": {
-      "text/plain": "<pyspark.sql.session.SparkSession at 0x188fe41c730>",
-      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://AKDGPORT11191.admin.kdg.be:4041\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.4.0</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[*]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>dimSalesRepInit</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
+      "text/plain": "<pyspark.sql.session.SparkSession at 0x21c377ae8d0>",
+      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://host.docker.internal:4040\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.5.2</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[*]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>dimSalesRepInit</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cc.setupEnvironment()\n",
     "spark = cc.startLocalCluster(\"dimSalesRepInit\")\n",
-    "spark.getActiveSession()"
+    "spark.getActiveSession()\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-09-25T10:08:47.406319Z",
-     "end_time": "2023-09-25T10:08:47.406319Z"
+     "end_time": "2024-09-03T10:52:17.680350600Z",
+     "start_time": "2024-09-03T10:52:14.249662500Z"
     }
    }
   },
@@ -87,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -95,38 +177,30 @@
      "text": [
       "root\n",
       " |-- salesRepSK: string (nullable = false)\n",
-      " |-- salesRepID: decimal(11,0) (nullable = true)\n",
+      " |-- salesrepid: integer (nullable = true)\n",
       " |-- name: string (nullable = true)\n",
       " |-- office: string (nullable = true)\n",
       " |-- scd_start: timestamp (nullable = true)\n",
       " |-- scd_end: timestamp (nullable = true)\n",
       " |-- md5: string (nullable = true)\n",
       " |-- current: boolean (nullable = false)\n",
-      "\n",
-      "+--------------------+----------+--------------+-------------+-------------------+-------------------+--------------------+-------+\n",
-      "|          salesRepSK|salesRepID|          name|       office|          scd_start|            scd_end|                 md5|current|\n",
-      "+--------------------+----------+--------------+-------------+-------------------+-------------------+--------------------+-------+\n",
-      "|92e6fd0a-ad38-46f...|         1|       Z. Jane|     Brussels|1999-01-01 00:00:00|2100-12-12 00:00:00|cca169d46f455b5fe...|   true|\n",
-      "|35cc902c-849a-48f...|         2|P. Chapmanneke|       Berlin|1999-01-01 00:00:00|2100-12-12 00:00:00|ff8eb928f1004c797...|   true|\n",
-      "|776066b8-5cb4-4ae...|         3|      T. Crane|     New York|1999-01-01 00:00:00|2100-12-12 00:00:00|6c062f95defda9dc3...|   true|\n",
-      "|008c920b-ad5b-422...|         4|     R. Geller|        Paris|1999-01-01 00:00:00|2100-12-12 00:00:00|6f34bd2f09f010ec1...|   true|\n",
-      "|44f6580b-519a-47c...|         5|       J.Mosby|       Berlin|1999-01-01 00:00:00|2100-12-12 00:00:00|fa85515824433037a...|   true|\n",
-      "|ba7f5076-4f1f-4c7...|         6|    B. Simpson|     New York|1999-01-01 00:00:00|2100-12-12 00:00:00|0ecb6ba5656492a5f...|   true|\n",
-      "|b535d847-a9ec-4b0...|         7|    B. Stinson|San Fransisco|1999-01-01 00:00:00|2100-12-12 00:00:00|e726b2d8dc0cf9a6f...|   true|\n",
-      "|a7976933-ce51-42b...|         8| L. Hofstadter|     Brussels|1999-01-01 00:00:00|2100-12-12 00:00:00|a2bbe52f8274b0f08...|   true|\n",
-      "|868a71b7-7319-4a8...|         9|     S. Cooper|     Brussels|1999-01-01 00:00:00|2100-12-12 00:00:00|d85c73c9d03df0002...|   true|\n",
-      "|c551093b-b69c-4fb...|        10|  F. Underwood|     Brussels|1999-01-01 00:00:00|2100-12-12 00:00:00|44cd1a6d596b05688...|   true|\n",
-      "|84e851e6-ea0a-450...|        11|      W. White|     New York|1999-01-01 00:00:00|2100-12-12 00:00:00|f9ea69ce2aa4482b4...|   true|\n",
-      "|aaea7613-6233-463...|        12|  T. Lannister|     New York|1999-01-01 00:00:00|2100-12-12 00:00:00|3259a471f9816d7c3...|   true|\n",
-      "|de5fc6e3-c9f5-4a7...|        13|     M. Rosske|       London|1999-01-01 00:00:00|2100-12-12 00:00:00|c99e12e650c2aebc8...|   true|\n",
-      "|771b17bd-7750-4ab...|     10015|         Frits|       London|1999-01-01 00:00:00|2100-12-12 00:00:00|a9986535dd7259e4c...|   true|\n",
-      "|afd66520-9c7d-493...|     10016|          Baby|       London|1999-01-01 00:00:00|2100-12-12 00:00:00|3791c67a76ab1b258...|   true|\n",
-      "|d9ab9c5b-fe22-4e0...|     10017|      Boomerke|        Paris|1999-01-01 00:00:00|2100-12-12 00:00:00|03900773d45edec5e...|   true|\n",
-      "|fcd8041b-cb23-402...|     10018|        Boomer|       London|1999-01-01 00:00:00|2100-12-12 00:00:00|41f9e91bd29384e7a...|   true|\n",
-      "|d6d4c6a6-493d-4b4...|     10019|         Frits|        Paris|1999-01-01 00:00:00|2100-12-12 00:00:00|18e0feb4944ac7a30...|   true|\n",
-      "|bfbf44d5-cd28-4f8...|     10020|       Mohamed|       Madrid|1999-01-01 00:00:00|2100-12-12 00:00:00|61f10525857596fe6...|   true|\n",
-      "+--------------------+----------+--------------+-------------+-------------------+-------------------+--------------------+-------+\n",
-      "\n"
+      "+--------------------+----------+-------------+-------------+-------------------+-------------------+--------------------+-------+\n",
+      "|          salesRepSK|salesrepid|         name|       office|          scd_start|            scd_end|                 md5|current|\n",
+      "+--------------------+----------+-------------+-------------+-------------------+-------------------+--------------------+-------+\n",
+      "|e29017f3-ee76-462...|         1|      R. Zane|       Berlin|1999-01-01 00:00:00|2100-12-12 00:00:00|1f8cbbc272a33dcc1...|   true|\n",
+      "|e8dfac53-cfdb-436...|         2|   P. Chapman|       Berlin|1999-01-01 00:00:00|2100-12-12 00:00:00|14b094c31bf9e4149...|   true|\n",
+      "|cc52e5ac-765e-457...|         3|     F. Crane|     New York|1999-01-01 00:00:00|2100-12-12 00:00:00|0715f05df18a3a794...|   true|\n",
+      "|e7b68ade-1c92-4e8...|         4|    R. Geller|     New York|1999-01-01 00:00:00|2100-12-12 00:00:00|6212c0ce01f144d66...|   true|\n",
+      "|d3858661-67e5-4fb...|         5|     T. Mosby|       Berlin|1999-01-01 00:00:00|2100-12-12 00:00:00|947579dec8084039e...|   true|\n",
+      "|3ad7fdb8-02a2-467...|         6|   H. Simpson|       Berlin|1999-01-01 00:00:00|2100-12-12 00:00:00|d636d1b0685650b34...|   true|\n",
+      "|5880490b-03a6-4c3...|         7|   B. Stinson|San Fransisco|1999-01-01 00:00:00|2100-12-12 00:00:00|e726b2d8dc0cf9a6f...|   true|\n",
+      "|b7c5e413-413e-421...|         8|L. Hofstadter|     Brussels|1999-01-01 00:00:00|2100-12-12 00:00:00|a2bbe52f8274b0f08...|   true|\n",
+      "|e28d311d-c5d3-412...|         9|    S. Cooper|     Brussels|1999-01-01 00:00:00|2100-12-12 00:00:00|d85c73c9d03df0002...|   true|\n",
+      "|76e8eb70-4124-41d...|        10| F. Underwood|     Brussels|1999-01-01 00:00:00|2100-12-12 00:00:00|44cd1a6d596b05688...|   true|\n",
+      "|b86a98c1-b1a1-447...|        11|     W. White|     New York|1999-01-01 00:00:00|2100-12-12 00:00:00|f9ea69ce2aa4482b4...|   true|\n",
+      "|d8c23730-aa18-44b...|        12| T. Lannister|     New York|1999-01-01 00:00:00|2100-12-12 00:00:00|3259a471f9816d7c3...|   true|\n",
+      "|1d1ba85a-a7ea-40c...|        13|      M. Ross|       London|1999-01-01 00:00:00|2100-12-12 00:00:00|d0faf94c1bbe2d4a7...|   true|\n",
+      "+--------------------+----------+-------------+-------------+-------------------+-------------------+--------------------+-------+\n"
      ]
     }
    ],
@@ -135,9 +209,9 @@
     "\n",
     "df_operational_sales_rep = spark.read \\\n",
     "    .format(\"jdbc\") \\\n",
-    "    .option(\"driver\" , \"com.microsoft.sqlserver.jdbc.SQLServerDriver\") \\\n",
+    "    .option(\"driver\" , cc.get_Property(\"driver\")) \\\n",
     "    .option(\"url\", cc.create_jdbc()) \\\n",
-    "    .option(\"dbtable\", \"dbo.salesrep\") \\\n",
+    "    .option(\"dbtable\", \"salesrep\") \\\n",
     "    .option(\"user\", cc.get_Property(\"username\")) \\\n",
     "    .option(\"password\", cc.get_Property(\"password\")) \\\n",
     "    .option(\"partitionColumn\", \"salesRepID\") \\\n",
@@ -166,8 +240,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-09-25T10:09:04.226086Z",
-     "end_time": "2023-09-25T10:09:04.226086Z"
+     "end_time": "2024-09-03T10:52:53.635885Z",
+     "start_time": "2024-09-03T10:52:39.699565200Z"
     }
    }
   },
@@ -193,15 +267,27 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'spark' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[8], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[43mspark\u001B[49m\u001B[38;5;241m.\u001B[39mstop()\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'spark' is not defined"
+     ]
+    }
+   ],
    "source": [
     "spark.stop()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-09-25T10:09:36.524023Z",
-     "end_time": "2023-09-25T10:09:36.524023Z"
+     "end_time": "2024-09-03T10:37:49.915529900Z",
+     "start_time": "2024-09-03T10:37:49.860599500Z"
     }
    }
   },
